v1.03/_sources/plc-lamp-vac_plc_lamp_vac_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.132.34.1.1
      -
    * - Target IP address
      - 172.21.132.34
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _plc_lamp_vac_pragmas:

Pragmas
-------

Total pragmas found: 129
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.4.2
        LCLS Vacuum, SLAC - LCLS, Unset, 0.0.0
        LCLSVacuumSerialDriverLib, SLAC - LCLS, Unset, 0.0.0
        PMPS, SLAC - LCLS, Unset, 2.2.1
        Tc2_SerialCom, Beckhoff Automation GmbH, Unset, 3.3.7.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4393600 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 647345888 (8)
        Constants.bLittleEndian, BOOL, 647345680 (8)
        Constants.bSimulationMode, BOOL, 647345688 (8)
        Constants.CompilerVersion, VERSION, 647345792 (64)
        Constants.CompilerVersionNumeric, DWORD, 647345952 (32)
        Constants.gc_GaugeValidState, INT, 634596464 (16)
        Constants.gc_iSizeOfGGOArray, INT, 634596448 (16)
        Constants.nPackMode, UINT, 647345872 (16)
        Constants.nRegisterSize, WORD, 647345856 (16)
        Constants.RuntimeVersion, VERSION, 647345728 (64)
        Constants.RuntimeVersionNumeric, DWORD, 647345920 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


DIAGNOSTICS
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DIAGNOSTICS.aEcSlaveInfo, ST_EcDevice, 641144128 (507904)
        DIAGNOSTICS.aiSlaveStates, BYTE, 641142080 (2048)
        DIAGNOSTICS.bAllSlaveStateGood, BOOL, 634667120 (8)
        DIAGNOSTICS.bMasterStateGood, BOOL, 634667128 (8)
        DIAGNOSTICS.fbEcatDiag, FB_EcatDiag, 640454464 (686944)
        DIAGNOSTICS.fbEcatDiag.I_AMSNetId, AMSNETID, 640454496 (48)
        DIAGNOSTICS.i_sAMSNetID, AMSNETID, 640453096 (48)
        DIAGNOSTICS.iMasterState, WORD, 640454448 (16)
        DIAGNOSTICS.nSlaveNumber, UINT, 641142064 (16)
        DIAGNOSTICS.sAMSNetID, STRING(80), 640453144 (648)
        DIAGNOSTICS.sLibVersion_LCLS_General, STRING(80), 640453792 (648)
        DIAGNOSTICS.sMasterState, STRING(80), 641141408 (648)
        DIAGNOSTICS.sPLCName, STRING(80), 640452448 (648)

.. raw:: html

   </details>
   <br />


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4392768 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4392896 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4392656 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4392928 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>399 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4184576 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4184480 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4184512 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4184352 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4184448 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4184288 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4184544 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4184320 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4184384 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4184416 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4184160 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4183936 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4184064 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4184128 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4184032 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4184192 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4184224 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4184000 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4183968 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4184096 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4183872 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4184256 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4183840 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4183904 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4184608 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4184640 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4185696 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4185632 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4185728 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4185760 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4185792 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4185824 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4185664 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4183728 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4183664 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4183792 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4183504 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4183776 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4183536 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4183488 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4183616 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4183808 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4183632 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4183648 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4183744 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4183520 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4183712 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4183568 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4183600 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4183680 (16)
        Global_Variables.ADSSTATE_START, UINT, 4183552 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4183584 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4183760 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4183696 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4251392 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4251424 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4251456 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4183200 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4182608 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4183424 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4183440 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4183312 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4183232 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4183296 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4183328 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4183248 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4183264 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4183280 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4183344 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4183360 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4183376 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4183392 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4183408 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4183216 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4183472 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4183456 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4393632 (16)
        Global_Variables.ASCII_DLE, BYTE, 4392616 (8)
        Global_Variables.ASCII_ETX, BYTE, 4392608 (8)
        Global_Variables.ASCII_NAK, BYTE, 4392624 (8)
        Global_Variables.ASCII_STX, BYTE, 4392600 (8)
        Global_Variables.bEcFoeOpenFileNameWithFileExt, BOOL, 4182592 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4185864 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4185856 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4183824 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4182600 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4183832 (8)
        Global_Variables.bSeqReadDrvAttrAndValue, BOOL, 4180472 (8)
        Global_Variables.COMERRORADS_INVALID_BAUDRATE, UDINT, 4391520 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTLEN, UDINT, 4391424 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTVER, UDINT, 4391456 (32)
        Global_Variables.COMERRORADS_INVALID_CMD, UDINT, 4391360 (32)
        Global_Variables.COMERRORADS_INVALID_COMPORT, UDINT, 4391328 (32)
        Global_Variables.COMERRORADS_INVALID_CTS_OUTCTRL, UDINT, 4391712 (32)
        Global_Variables.COMERRORADS_INVALID_DATABITS, UDINT, 4391584 (32)
        Global_Variables.COMERRORADS_INVALID_DATAPOINTER, UDINT, 4391392 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_OUTCTRL, UDINT, 4391744 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_SENS, UDINT, 4391776 (32)
        Global_Variables.COMERRORADS_INVALID_DTR_CTRL, UDINT, 4391648 (32)
        Global_Variables.COMERRORADS_INVALID_PARITY, UDINT, 4391552 (32)
        Global_Variables.COMERRORADS_INVALID_RTS_CTRL, UDINT, 4391680 (32)
        Global_Variables.COMERRORADS_INVALID_STOPBITS, UDINT, 4391616 (32)
        Global_Variables.COMERRORADS_INVALID_TL, UDINT, 4391488 (32)
        Global_Variables.COMERRORADS_NOT_INIT, UDINT, 4391808 (32)
        Global_Variables.COMERRORADS_PORT_CONNECTED, UDINT, 4391872 (32)
        Global_Variables.COMERRORADS_PORT_NOT_CONNECTED, UDINT, 4391904 (32)
        Global_Variables.COMERRORADS_RD_BUFFER_OVERRUN, UDINT, 4391840 (32)
        Global_Variables.COMERRORADS_RD_FAILURE, UDINT, 4392000 (32)
        Global_Variables.COMERRORADS_RD_THREAD_TIMEOUT, UDINT, 4391936 (32)
        Global_Variables.COMERRORADS_SERVER_INCOMPATIBLE, UDINT, 4392064 (32)
        Global_Variables.COMERRORADS_WR_FAILURE, UDINT, 4392032 (32)
        Global_Variables.COMERRORADS_WR_THREAD_TIMEOUT, UDINT, 4391968 (32)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4394624 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4264352 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4264384 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4270656 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4270624 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4270592 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4270688 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4186528 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634618368 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4250136 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4188160 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4386928 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4386936 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634618304 (64)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO, UDINT, 4180704 (32)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO_LASTERROR, UDINT, 4180736 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE, UDINT, 4180352 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE_LASTERROR, UDINT, 4180384 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FCLOSE, UDINT, 4180544 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENREAD, UDINT, 4180480 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENWRITE, UDINT, 4180512 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FREAD, UDINT, 4180576 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FWRITE, UDINT, 4180608 (32)
        Global_Variables.EC_ADS_IGRP_FOE_LASTERROR, UDINT, 4180672 (32)
        Global_Variables.EC_ADS_IGRP_FOE_PROGRESSINFO, UDINT, 4180640 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_FRAME, UDINT, 4180320 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_SLAVE, UDINT, 4179936 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_DEVICESTATE, UDINT, 4180288 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SENDCMD, UDINT, 4180096 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ABNORMAL_STATE_CHANGES, UDINT, 4180224 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ADDRESSES, UDINT, 4180064 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_CRC, UDINT, 4180192 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_IDENTITY, UDINT, 4180160 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_SETPRESENT_CHANGES, UDINT, 4180256 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_STATEMACHINE, UDINT, 4179808 (32)
        Global_Variables.EC_ADS_IGRP_SLAVE_STATEMACHINE, UDINT, 4180128 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_PORT, UDINT, 4180000 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_ROUTER, UDINT, 4180032 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_SLAVE, UDINT, 4179968 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_CURSTATE, UDINT, 4179840 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_INTERNALSTATE, UDINT, 4179904 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_REQSTATE, UDINT, 4179872 (32)
        Global_Variables.EC_AMSPORT_MASTER, UINT, 4097168 (16)
        Global_Variables.EC_CMD_TYPE_APRD, BYTE, 4096376 (8)
        Global_Variables.EC_CMD_TYPE_APRW, BYTE, 4179568 (8)
        Global_Variables.EC_CMD_TYPE_APWR, BYTE, 4097160 (8)
        Global_Variables.EC_CMD_TYPE_BRD, BYTE, 4179600 (8)
        Global_Variables.EC_CMD_TYPE_BRW, BYTE, 4179616 (8)
        Global_Variables.EC_CMD_TYPE_BWR, BYTE, 4179608 (8)
        Global_Variables.EC_CMD_TYPE_FPRD, BYTE, 4179576 (8)
        Global_Variables.EC_CMD_TYPE_FPRW, BYTE, 4179592 (8)
        Global_Variables.EC_CMD_TYPE_FPWR, BYTE, 4179584 (8)
        Global_Variables.EC_CMD_TYPE_LRD, BYTE, 4179624 (8)
        Global_Variables.EC_CMD_TYPE_LRW, BYTE, 4179640 (8)
        Global_Variables.EC_CMD_TYPE_LWR, BYTE, 4179632 (8)
        Global_Variables.EC_COE_PROTERR_ACCESS, UDINT, 4181344 (32)
        Global_Variables.EC_COE_PROTERR_BLK_SIZE, UDINT, 4181216 (32)
        Global_Variables.EC_COE_PROTERR_CCS_SCS, UDINT, 4181184 (32)
        Global_Variables.EC_COE_PROTERR_CRC, UDINT, 4181280 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE, UDINT, 4181760 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE1, UDINT, 4181792 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE2, UDINT, 4181824 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE, UDINT, 4181632 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE1, UDINT, 4181664 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE2, UDINT, 4181696 (32)
        Global_Variables.EC_COE_PROTERR_DICTIONARY, UDINT, 4182016 (32)
        Global_Variables.EC_COE_PROTERR_GENERAL, UDINT, 4181888 (32)
        Global_Variables.EC_COE_PROTERR_HARDWARE, UDINT, 4181600 (32)
        Global_Variables.EC_COE_PROTERR_I_INCOMP, UDINT, 4181568 (32)
        Global_Variables.EC_COE_PROTERR_INDEX, UDINT, 4181440 (32)
        Global_Variables.EC_COE_PROTERR_MEMORY, UDINT, 4181312 (32)
        Global_Variables.EC_COE_PROTERR_MINMAX, UDINT, 4181856 (32)
        Global_Variables.EC_COE_PROTERR_OFFSET, UDINT, 4181728 (32)
        Global_Variables.EC_COE_PROTERR_P_INCOMP, UDINT, 4181536 (32)
        Global_Variables.EC_COE_PROTERR_PDO_LEN, UDINT, 4181504 (32)
        Global_Variables.EC_COE_PROTERR_PDO_MAP, UDINT, 4181472 (32)
        Global_Variables.EC_COE_PROTERR_READONLY, UDINT, 4181408 (32)
        Global_Variables.EC_COE_PROTERR_SEQNO, UDINT, 4181248 (32)
        Global_Variables.EC_COE_PROTERR_TIMEOUT, UDINT, 4181152 (32)
        Global_Variables.EC_COE_PROTERR_TOGGLE, UDINT, 4181120 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER, UDINT, 4181920 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER1, UDINT, 4181952 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER2, UDINT, 4181984 (32)
        Global_Variables.EC_COE_PROTERR_WRITEONLY, UDINT, 4181376 (32)
        Global_Variables.EC_DCTIME_DATEDELTA_OFFSET, DWORD, 4182048 (32)
        Global_Variables.EC_DCTIME_DELTA_OFFSET, T_ULARGE_INTEGER, 4182080 (64)
        Global_Variables.EC_DCTIME_DELTA_OFFSET64, ULINT, 4182336 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4182272 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY64, ULINT, 4182528 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4182144 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC64, ULINT, 4182400 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4182208 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC64, ULINT, 4182464 (64)
        Global_Variables.EC_DEVICE_STATE_BOOTSTRAP, BYTE, 4179672 (8)
        Global_Variables.EC_DEVICE_STATE_DISABLED, BYTE, 4179720 (8)
        Global_Variables.EC_DEVICE_STATE_ERROR, BYTE, 4179696 (8)
        Global_Variables.EC_DEVICE_STATE_INIT, BYTE, 4179656 (8)
        Global_Variables.EC_DEVICE_STATE_INITCMD_ERROR, BYTE, 4179712 (8)
        Global_Variables.EC_DEVICE_STATE_INVALID_VPRS, BYTE, 4179704 (8)
        Global_Variables.EC_DEVICE_STATE_MASK, BYTE, 4179648 (8)
        Global_Variables.EC_DEVICE_STATE_OP, BYTE, 4179688 (8)
        Global_Variables.EC_DEVICE_STATE_PREOP, BYTE, 4179664 (8)
        Global_Variables.EC_DEVICE_STATE_SAFEOP, BYTE, 4179680 (8)
        Global_Variables.EC_FOE_PROTERR_ACCESS, UDINT, 4180832 (32)
        Global_Variables.EC_FOE_PROTERR_BOOTSTRAPONLY, UDINT, 4181024 (32)
        Global_Variables.EC_FOE_PROTERR_DISKFULL, UDINT, 4180864 (32)
        Global_Variables.EC_FOE_PROTERR_EXISTS, UDINT, 4180960 (32)
        Global_Variables.EC_FOE_PROTERR_ILLEAGAL, UDINT, 4180896 (32)
        Global_Variables.EC_FOE_PROTERR_INVALIDPASSWORD, UDINT, 4181088 (32)
        Global_Variables.EC_FOE_PROTERR_NOTDEFINED, UDINT, 4180768 (32)
        Global_Variables.EC_FOE_PROTERR_NOTFOUND, UDINT, 4180800 (32)
        Global_Variables.EC_FOE_PROTERR_NOTINBOOTSTRAP, UDINT, 4181056 (32)
        Global_Variables.EC_FOE_PROTERR_NOUSER, UDINT, 4180992 (32)
        Global_Variables.EC_FOE_PROTERR_PACKENO, UDINT, 4180928 (32)
        Global_Variables.EC_LINK_STATE_ADDITIONAL_LINK, BYTE, 4179760 (8)
        Global_Variables.EC_LINK_STATE_LINK_WITHOUT_COMM, BYTE, 4179744 (8)
        Global_Variables.EC_LINK_STATE_MISSING_LINK, BYTE, 4179752 (8)
        Global_Variables.EC_LINK_STATE_NOT_PRESENT, BYTE, 4179736 (8)
        Global_Variables.EC_LINK_STATE_OK, BYTE, 4179728 (8)
        Global_Variables.EC_LINK_STATE_PORT_A, BYTE, 4179768 (8)
        Global_Variables.EC_LINK_STATE_PORT_B, BYTE, 4179776 (8)
        Global_Variables.EC_LINK_STATE_PORT_C, BYTE, 4179784 (8)
        Global_Variables.EC_LINK_STATE_PORT_D, BYTE, 4179792 (8)
        Global_Variables.EC_MAX_SLAVES, UINT, 4179552 (16)
        Global_Variables.EC_SOE_ELEMENT_ATTRIBUTE, BYTE, 4180424 (8)
        Global_Variables.EC_SOE_ELEMENT_DATASTATE, BYTE, 4179800 (8)
        Global_Variables.EC_SOE_ELEMENT_DEFAULT, BYTE, 4180464 (8)
        Global_Variables.EC_SOE_ELEMENT_MAX, BYTE, 4180448 (8)
        Global_Variables.EC_SOE_ELEMENT_MIN, BYTE, 4180440 (8)
        Global_Variables.EC_SOE_ELEMENT_NAME, BYTE, 4180416 (8)
        Global_Variables.EC_SOE_ELEMENT_UNIT, BYTE, 4180432 (8)
        Global_Variables.EC_SOE_ELEMENT_VALUE, BYTE, 4180456 (8)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4252032 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4390056 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4389760 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4389632 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4250144 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4186512 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 634597664 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4251504 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4251488 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4251520 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4251536 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4251552 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4251872 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4251648 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4251968 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4251744 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4251936 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4252000 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4251584 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4251616 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4251808 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4251712 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4251840 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4251904 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4251776 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4251680 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4185952 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4186016 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4185984 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4185888 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4186048 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4185920 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4252384 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4252128 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4251472 (16)
        Global_Variables.g_DummyVG, ST_VG, 634596608 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 634596480 (16)
        Global_Variables.g_stSystem, ST_System, 634596496 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4188128 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4187176 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4188096 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4188112 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4251360 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4249824 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4249856 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4394560 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4394592 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4249728 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4249696 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4249664 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4187184 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4249888 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4188176 (16)
        Global_Variables.MAX_RETRIES, INT, 4392640 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4250112 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4188168 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4250128 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4186624 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4394656 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4250120 (8)
        Global_Variables.nWatchdogTime, BYTE, 4187168 (8)
        Global_Variables.PI, LREAL, 4186560 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4250048 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4250080 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4250016 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4249920 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4185440 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4184800 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4184768 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4249952 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4249984 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4184864 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4185184 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4185152 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4251328 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4185024 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4184832 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4185120 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4185056 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4184896 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4185216 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4185088 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4184960 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4184992 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4184928 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4249760 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4249792 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4185248 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4184672 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4184704 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4184736 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4185312 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4185280 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4185344 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4185408 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4185376 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4185872 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4185880 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4259008 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4259328 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4258944 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4259264 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4258720 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4257872 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4258256 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4258880 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4259200 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4258752 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4259072 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4258816 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4259136 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 634597824 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4186496 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4186480 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4186384 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4186320 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4186336 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4186352 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4186304 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4186368 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4186448 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4186400 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4186432 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4186464 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4186416 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634611328 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4393952 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4393696 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4393664 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4393888 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4393920 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4393760 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4393792 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4393824 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4393728 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4393856 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4394208 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4394080 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4394048 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4393984 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4394144 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4394176 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4394016 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4394112 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4395104 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4394688 (416)
        Global_Variables.TIMEOUT_QVZ, TIME, 4392704 (32)
        Global_Variables.TIMEOUT_WVZ, TIME, 4392736 (32)
        Global_Variables.TIMEOUT_ZVZ, TIME, 4392672 (32)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4185568 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4185472 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4185536 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4185504 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4185600 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4259392 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>16 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_LCLS_Vacuum, ST_LibVersion, 634598848 (288)
        Global_Version.stLibVersion_LCLSVacuumSerialDriverLib, ST_LibVersion, 634599136 (288)
        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 634618720 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4179264 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4390464 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634618432 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634611040 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4390752 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4391040 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4182624 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4182912 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4187808 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4393184 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4395520 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4187200 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634596160 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4393120 (32)


GVL_COM
^^^^^^^

.. raw:: html

   <details>
       <summary>30 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM.fbSerialLineControl_LAMP_C2_PTM_01, SerialLineControl, 641682848 (10432)
        GVL_COM.fbSerialLineControl_LAMP_C2_PTM_02, SerialLineControl, 641693280 (10432)
        GVL_COM.fbSerialLineControl_LAMP_C2_PTM_03, SerialLineControl, 641703712 (10432)
        GVL_COM.fbSerialLineControl_LAMP_C2_PTM_04, SerialLineControl, 641714144 (10432)
        GVL_COM.fbSerialLineControl_LAMP_GJ2_PTM_01, SerialLineControl, 641735008 (10432)
        GVL_COM.fbSerialLineControl_LAMP_ROUGH_PTM_01, SerialLineControl, 641724576 (10432)
        GVL_COM.SerialRXBuffer_LAMP_C2_PTM_01, ComBuffer, 641652704 (2512)
        GVL_COM.SerialRXBuffer_LAMP_C2_PTM_02, ComBuffer, 641657728 (2512)
        GVL_COM.SerialRXBuffer_LAMP_C2_PTM_03, ComBuffer, 641662752 (2512)
        GVL_COM.SerialRXBuffer_LAMP_C2_PTM_04, ComBuffer, 641667776 (2512)
        GVL_COM.SerialRXBuffer_LAMP_GJ2_PTM_01, ComBuffer, 641677824 (2512)
        GVL_COM.SerialRXBuffer_LAMP_ROUGH_PTM_01, ComBuffer, 641672800 (2512)
        GVL_COM.SerialTXBuffer_LAMP_C2_PTM_01, ComBuffer, 641655216 (2512)
        GVL_COM.SerialTXBuffer_LAMP_C2_PTM_02, ComBuffer, 641660240 (2512)
        GVL_COM.SerialTXBuffer_LAMP_C2_PTM_03, ComBuffer, 641665264 (2512)
        GVL_COM.SerialTXBuffer_LAMP_C2_PTM_04, ComBuffer, 641670288 (2512)
        GVL_COM.SerialTXBuffer_LAMP_GJ2_PTM_01, ComBuffer, 641680336 (2512)
        GVL_COM.SerialTXBuffer_LAMP_ROUGH_PTM_01, ComBuffer, 641675312 (2512)
        GVL_COM.stComIn_LAMP_C2_PTM_01, EL6inData22B, 641745440 (192)
        GVL_COM.stComIn_LAMP_C2_PTM_02, EL6inData22B, 641745824 (192)
        GVL_COM.stComIn_LAMP_C2_PTM_03, EL6inData22B, 641746208 (192)
        GVL_COM.stComIn_LAMP_C2_PTM_04, EL6inData22B, 641746592 (192)
        GVL_COM.stComIn_LAMP_GJ2_PTM_01, EL6inData22B, 641747360 (192)
        GVL_COM.stComIn_LAMP_ROUGH_PTM_01, EL6inData22B, 641746976 (192)
        GVL_COM.stComOut_LAMP_C2_PTM_01, EL6outData22B, 641745632 (192)
        GVL_COM.stComOut_LAMP_C2_PTM_02, EL6outData22B, 641746016 (192)
        GVL_COM.stComOut_LAMP_C2_PTM_03, EL6outData22B, 641746400 (192)
        GVL_COM.stComOut_LAMP_C2_PTM_04, EL6outData22B, 641746784 (192)
        GVL_COM.stComOut_LAMP_GJ2_PTM_01, EL6outData22B, 641747552 (192)
        GVL_COM.stComOut_LAMP_ROUGH_PTM_01, EL6outData22B, 641747168 (192)

.. raw:: html

   </details>
   <br />


GVL_Devices
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>110 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Devices.fb_PfeifferCom_LAMP_C2_PTM_01, FB_PFEIFFER_COM, 643234112 (797696)
        GVL_Devices.fb_PfeifferCom_LAMP_C2_PTM_02, FB_PFEIFFER_COM, 644058048 (797696)
        GVL_Devices.fb_PfeifferCom_LAMP_C2_PTM_03, FB_PFEIFFER_COM, 644881984 (797696)
        GVL_Devices.fb_PfeifferCom_LAMP_C2_PTM_04, FB_PFEIFFER_COM, 645705920 (797696)
        GVL_Devices.fb_PfeifferCom_LAMP_ROUGH_PTM_01, FB_PFEIFFER_COM, 646529856 (797696)
        GVL_Devices.fb_TD20Com_LAMP_GJ2_PTM_01, FB_OERLIKON_TD20_COM, 647327744 (17696)
        GVL_Devices.LAMP_C1_GHC_01, FB_MKS909, 642865216 (87872)
        GVL_Devices.LAMP_C1_GHC_01.i_iPRESS_R, INT, 642953008 (16)
        GVL_Devices.LAMP_C1_GHC_01.q_xHV_DIS, BOOL, 642953024 (8)
        GVL_Devices.LAMP_C2_GCC_01, FB_MKS500, 642684608 (88384)
        GVL_Devices.LAMP_C2_GCC_01.i_iPRESS_R, INT, 642772592 (16)
        GVL_Devices.LAMP_C2_GCC_01.i_xDisc_Active, BOOL, 642772624 (8)
        GVL_Devices.LAMP_C2_GCC_01.i_xHV_ON, BOOL, 642772616 (8)
        GVL_Devices.LAMP_C2_GCC_01.q_xHV_DIS, BOOL, 642772608 (8)
        GVL_Devices.LAMP_C2_GPI_01, FB_MKS275, 642249472 (86720)
        GVL_Devices.LAMP_C2_GPI_01.i_iPRESS_R, INT, 642335936 (16)
        GVL_Devices.LAMP_C2_PTM_01, FB_PTM_Pfeiffer, 641831232 (83648)
        GVL_Devices.LAMP_C2_PTM_01.i_xAtSpd, BOOL, 641914816 (8)
        GVL_Devices.LAMP_C2_PTM_01.i_xFaultNC, BOOL, 641914824 (8)
        GVL_Devices.LAMP_C2_PTM_01.i_xRemote, BOOL, 641914840 (8)
        GVL_Devices.LAMP_C2_PTM_01.i_xWarn, BOOL, 641914832 (8)
        GVL_Devices.LAMP_C2_PTM_01.q_PumpingStation, BOOL, 641914856 (8)
        GVL_Devices.LAMP_C2_PTM_01.q_RunDO, BOOL, 641914848 (8)
        GVL_Devices.LAMP_C2_PTM_01.q_xRemote, BOOL, 641914864 (8)
        GVL_Devices.LAMP_C2_PTM_01.q_xReset, BOOL, 641914872 (8)
        GVL_Devices.LAMP_C2_PTM_02, FB_PTM_Pfeiffer, 641914880 (83648)
        GVL_Devices.LAMP_C2_PTM_02.i_xAtSpd, BOOL, 641998464 (8)
        GVL_Devices.LAMP_C2_PTM_02.i_xFaultNC, BOOL, 641998472 (8)
        GVL_Devices.LAMP_C2_PTM_02.i_xRemote, BOOL, 641998488 (8)
        GVL_Devices.LAMP_C2_PTM_02.i_xWarn, BOOL, 641998480 (8)
        GVL_Devices.LAMP_C2_PTM_02.q_PumpingStation, BOOL, 641998504 (8)
        GVL_Devices.LAMP_C2_PTM_02.q_RunDO, BOOL, 641998496 (8)
        GVL_Devices.LAMP_C2_PTM_02.q_xRemote, BOOL, 641998512 (8)
        GVL_Devices.LAMP_C2_PTM_02.q_xReset, BOOL, 641998520 (8)
        GVL_Devices.LAMP_C2_PTM_03, FB_PTM_Pfeiffer, 641998528 (83648)
        GVL_Devices.LAMP_C2_PTM_03.i_xAtSpd, BOOL, 642082112 (8)
        GVL_Devices.LAMP_C2_PTM_03.i_xFaultNC, BOOL, 642082120 (8)
        GVL_Devices.LAMP_C2_PTM_03.i_xRemote, BOOL, 642082136 (8)
        GVL_Devices.LAMP_C2_PTM_03.i_xWarn, BOOL, 642082128 (8)
        GVL_Devices.LAMP_C2_PTM_03.q_PumpingStation, BOOL, 642082152 (8)
        GVL_Devices.LAMP_C2_PTM_03.q_RunDO, BOOL, 642082144 (8)
        GVL_Devices.LAMP_C2_PTM_03.q_xRemote, BOOL, 642082160 (8)
        GVL_Devices.LAMP_C2_PTM_03.q_xReset, BOOL, 642082168 (8)
        GVL_Devices.LAMP_C2_PTM_04, FB_PTM_Pfeiffer, 642082176 (83648)
        GVL_Devices.LAMP_C2_PTM_04.i_xAtSpd, BOOL, 642165760 (8)
        GVL_Devices.LAMP_C2_PTM_04.i_xFaultNC, BOOL, 642165768 (8)
        GVL_Devices.LAMP_C2_PTM_04.i_xRemote, BOOL, 642165784 (8)
        GVL_Devices.LAMP_C2_PTM_04.i_xWarn, BOOL, 642165776 (8)
        GVL_Devices.LAMP_C2_PTM_04.q_PumpingStation, BOOL, 642165800 (8)
        GVL_Devices.LAMP_C2_PTM_04.q_RunDO, BOOL, 642165792 (8)
        GVL_Devices.LAMP_C2_PTM_04.q_xRemote, BOOL, 642165808 (8)
        GVL_Devices.LAMP_C2_PTM_04.q_xReset, BOOL, 642165816 (8)
        GVL_Devices.LAMP_GJ2_PTM_01, FB_PTM_TurboDrive, 641747776 (83456)
        GVL_Devices.LAMP_GJ2_PTM_01.i_xAtSpd, BOOL, 641831200 (8)
        GVL_Devices.LAMP_GJ2_PTM_01.i_xFaultNC, BOOL, 641831208 (8)
        GVL_Devices.LAMP_GJ2_PTM_01.q_RunDO, BOOL, 641831216 (8)
        GVL_Devices.LAMP_ROUGH_GPI_01, FB_9XX, 642336192 (87104)
        GVL_Devices.LAMP_ROUGH_GPI_01.i_iPRESS_R, INT, 642423216 (16)
        GVL_Devices.LAMP_ROUGH_GPI_02, FB_9XX, 642423296 (87104)
        GVL_Devices.LAMP_ROUGH_GPI_02.i_iPRESS_R, INT, 642510320 (16)
        GVL_Devices.LAMP_ROUGH_GPI_03, FB_9XX, 642510400 (87104)
        GVL_Devices.LAMP_ROUGH_GPI_03.i_iPRESS_R, INT, 642597424 (16)
        GVL_Devices.LAMP_ROUGH_GPI_04, FB_9XX, 642597504 (87104)
        GVL_Devices.LAMP_ROUGH_GPI_04.i_iPRESS_R, INT, 642684528 (16)
        GVL_Devices.LAMP_ROUGH_PTM_01, FB_PTM_Pfeiffer, 642165824 (83648)
        GVL_Devices.LAMP_ROUGH_PTM_01.i_xAtSpd, BOOL, 642249408 (8)
        GVL_Devices.LAMP_ROUGH_PTM_01.i_xFaultNC, BOOL, 642249416 (8)
        GVL_Devices.LAMP_ROUGH_PTM_01.i_xRemote, BOOL, 642249432 (8)
        GVL_Devices.LAMP_ROUGH_PTM_01.i_xWarn, BOOL, 642249424 (8)
        GVL_Devices.LAMP_ROUGH_PTM_01.q_PumpingStation, BOOL, 642249448 (8)
        GVL_Devices.LAMP_ROUGH_PTM_01.q_RunDO, BOOL, 642249440 (8)
        GVL_Devices.LAMP_ROUGH_PTM_01.q_xRemote, BOOL, 642249456 (8)
        GVL_Devices.LAMP_ROUGH_PTM_01.q_xReset, BOOL, 642249464 (8)
        GVL_Devices.LAMP_ROUGH_VRC_01, FB_VRC, 642953088 (84928)
        GVL_Devices.LAMP_ROUGH_VRC_01.i_xClsLS, BOOL, 643037992 (8)
        GVL_Devices.LAMP_ROUGH_VRC_01.i_xOpnLS, BOOL, 643037984 (8)
        GVL_Devices.LAMP_ROUGH_VRC_01.q_xOPN_DO, BOOL, 643038000 (8)
        GVL_Devices.LAMP_ROUGH_VRC_02, FB_VRC_NO, 643122944 (84928)
        GVL_Devices.LAMP_ROUGH_VRC_02.i_xClsLS, BOOL, 643207848 (8)
        GVL_Devices.LAMP_ROUGH_VRC_02.i_xOpnLS, BOOL, 643207840 (8)
        GVL_Devices.LAMP_ROUGH_VRC_02.q_xCLS_DO, BOOL, 643207856 (8)
        GVL_Devices.LAMP_ROUGH_VRC_03, FB_VRC, 643038016 (84928)
        GVL_Devices.LAMP_ROUGH_VRC_03.i_xClsLS, BOOL, 643122920 (8)
        GVL_Devices.LAMP_ROUGH_VRC_03.i_xOpnLS, BOOL, 643122912 (8)
        GVL_Devices.LAMP_ROUGH_VRC_03.q_xOPN_DO, BOOL, 643122928 (8)
        GVL_Devices.LAMP_VCN_01, FB_VCN_VAT590, 642772992 (92224)
        GVL_Devices.LAMP_VCN_01.i_bValveEthCatStatus, BOOL, 642865112 (8)
        GVL_Devices.LAMP_VCN_01.i_eControlMode, E_ControlMode, 642864928 (8)
        GVL_Devices.LAMP_VCN_01.i_eFatalError, E_FatalErrors, 642864944 (16)
        GVL_Devices.LAMP_VCN_01.i_nRawPosition, DINT, 642864864 (32)
        GVL_Devices.LAMP_VCN_01.i_nRawPressure, DINT, 642864896 (32)
        GVL_Devices.LAMP_VCN_01.i_stExtnWarnings, ST_ExtendedWarnings, 642864992 (16)
        GVL_Devices.LAMP_VCN_01.i_stGenStatus, ST_GeneralStatus, 642864960 (16)
        GVL_Devices.LAMP_VCN_01.i_stGenWarnings, ST_GeneralWarnings, 642864976 (16)
        GVL_Devices.LAMP_VCN_01.i_stVat590PlcDriveRef, ST_PlcDriveRef, 642858992 (80)
        GVL_Devices.LAMP_VCN_01.o_eCtrlModeSP, E_ControlModeSP, 642865088 (8)
        GVL_Devices.LAMP_VCN_01.o_nRawPositionSP, DINT, 642865024 (32)
        GVL_Devices.LAMP_VCN_01.o_nRawPressureSP, DINT, 642865056 (32)
        GVL_Devices.LAMP_VCN_01.o_stGenCtrlSP, ST_GeneralControlSP, 642865096 (16)
        GVL_Devices.st_Pfeiffer_CTRL_LAMP_C2_PTM_01, ST_PfeifferControl, 643207872 (3200)
        GVL_Devices.st_Pfeiffer_CTRL_LAMP_C2_PTM_02, ST_PfeifferControl, 644031808 (3200)
        GVL_Devices.st_Pfeiffer_CTRL_LAMP_C2_PTM_03, ST_PfeifferControl, 644855744 (3200)
        GVL_Devices.st_Pfeiffer_CTRL_LAMP_C2_PTM_04, ST_PfeifferControl, 645679680 (3200)
        GVL_Devices.st_Pfeiffer_CTRL_LAMP_ROUGH_PTM_01, ST_PfeifferControl, 646503616 (3200)
        GVL_Devices.st_Pfeiffer_RBK_LAMP_C2_PTM_01, ST_PfeifferStatus, 643211072 (23040)
        GVL_Devices.st_Pfeiffer_RBK_LAMP_C2_PTM_02, ST_PfeifferStatus, 644035008 (23040)
        GVL_Devices.st_Pfeiffer_RBK_LAMP_C2_PTM_03, ST_PfeifferStatus, 644858944 (23040)
        GVL_Devices.st_Pfeiffer_RBK_LAMP_C2_PTM_04, ST_PfeifferStatus, 645682880 (23040)
        GVL_Devices.st_Pfeiffer_RBK_LAMP_ROUGH_PTM_01, ST_PfeifferStatus, 646506816 (23040)
        GVL_Devices.st_TD20_RBK_LAMP_GJ2_PTM_01, ST_TD20Status, 647327552 (176)

.. raw:: html

   </details>
   <br />


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4393472 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81984)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4179200 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4179232 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4395856 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4392632 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4395824 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4395808 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4393648 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 4397952 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4395872 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4395840 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4395904 (2048)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 634596592 (16)


GVL_PLC_Interfaces
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>16 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PLC_Interfaces.rIP1_MAIN_rPRESS, REAL, 647345632 (32)
        GVL_PLC_Interfaces.sENDSTATION_PLC_NAME, STRING(8), 647345512 (72)
        GVL_PLC_Interfaces.sHUTCH_PLC_NAME, STRING(8), 647345440 (72)
        GVL_PLC_Interfaces.xEcatBridge_External_device_not_connected, BOOL, 641142056 (8)
        GVL_PLC_Interfaces.xEcatBridge_TxPDO_state, BOOL, 640454440 (8)
        GVL_PLC_Interfaces.xEcatBridge_WcState, BOOL, 641747744 (8)
        GVL_PLC_Interfaces.xHighVoltageSafteyLoopEnable, BOOL, 647345616 (8)
        GVL_PLC_Interfaces.xIP1_HV_SAFETY_ENABLE, BOOL, 647345608 (8)
        GVL_PLC_Interfaces.xIP1_MAIN_xAT_VAC, BOOL, 647345592 (8)
        GVL_PLC_Interfaces.xIP1_MAIN_xPRESS_OK, BOOL, 647345600 (8)
        GVL_PLC_Interfaces.xIP1_ROUGH_VRC_01_OPEN_LS, BOOL, 641747768 (8)
        GVL_PLC_Interfaces.xIP1_ROUGH_VRC_02_OPEN_LS, BOOL, 647327728 (8)
        GVL_PLC_Interfaces.xIP1_ROUGH_VRC_03_OPEN_LS, BOOL, 647327736 (8)
        GVL_PLC_Interfaces.xIP1_TURBOS_ALL_AtSpd, BOOL, 647345584 (8)
        GVL_PLC_Interfaces.xTMO_ROUGH1_VRC_01_OPEN_LS, BOOL, 641747752 (8)
        GVL_PLC_Interfaces.xTMO_ROUGH2_VRC_01_OPEN_LS, BOOL, 641747760 (8)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626275296 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 626259296 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 626227264 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626225216 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626225184 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626227272 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626227280 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4397984 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626227296 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4395848 (8)


GVL_Variables
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Variables.rHighVoltageMinPressure, REAL, 647345696 (32)
        GVL_Variables.xOnBeamline, BOOL, 647345664 (8)
        GVL_Variables.xSystemOverrideMode_LAMP, BOOL, 647345624 (8)


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 634596536 (48)


MAIN
^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MAIN.b_PumpRunning, BOOL, 634667112 (8)
        MAIN.b_TurboPumpRunningFlag, BOOL, 634667104 (8)
        MAIN.fbLogHandler, FB_LogHandler, 634667136 (5782016)
        MAIN.TurboPumpDelayTime, TIME, 640449376 (32)
        MAIN.TurboPumpTOF, TOF, 640449152 (224)
        MAIN.xEcatBridge_COM_ERROR, BOOL, 634596584 (8)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4393152 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634604064 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634607552 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634605856 (1696)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634604160 (1696)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634607584 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634603840 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634603968 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634602816 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634609696 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634608672 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634608608 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634607568 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634603872 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634604080 (16)
        PMPS_GVL.PERange, PE_Ranges, 634597792 (32)
        PMPS_GVL.reVHyst, REAL, 634608640 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634604096 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634601120 (1696)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634599424 (1696)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634604032 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634603904 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634610720 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634608624 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634610752 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634610784 (256)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 647368768 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 647368256 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 647368384 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 647368512 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 647368128 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 647368640 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 647399104 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 647345984 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__ComTask, _Implicit_Task_Info, 647351232 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 647351936 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 647347008 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 647349056 (2048)
        TwinCAT_SystemInfoVarList._TaskOid_ComTask, OTCID, 647351136 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 647351200 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_ComTask, OTCID, 647351104 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 647351168 (32)


